--- a/shampo.html
+++ b/shampo.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Frutin - Organic and Healthy Food HTML Template - Home Organic Farm</title>
-    <meta name="author" content="Frutin">
-    <meta name="description" content="Frutin - Organic and Healthy Food HTML Template">
-    <meta name="keywords" content="Frutin - Organic and Healthy Food HTML Template">
+    <title>Eco-Cleanser</title>
+    <meta name="author" content="Eco-Cleanser">
+    <meta name="description" content="Eco-Cleanser">
+    <meta name="keywords" content="Eco-Cleanser">
     <meta name="robots" content="INDEX,FOLLOW">
 
     <!-- Mobile Specific Metas -->
