--- a/blogs.html
+++ b/blogs.html
@@ -4,29 +4,29 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Frutin - Organic and Healthy Food HTML Template - Home Organic Farm</title>
-    <meta name="author" content="Frutin">
-    <meta name="description" content="Frutin - Organic and Healthy Food HTML Template">
-    <meta name="keywords" content="Frutin - Organic and Healthy Food HTML Template">
+    <title>Eco-Cleanser</title>
+    <meta name="author" content="Eco-Cleanser">
+    <meta name="description" content="Eco-Cleanser">
+    <meta name="keywords" content="Eco-Cleanser">
     <meta name="robots" content="INDEX,FOLLOW">
 
     <!-- Mobile Specific Metas -->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Favicons - Place favicon.ico in the root directory -->
-    <link rel="apple-touch-icon" sizes="57x57" href="assets/img/favicons/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="assets/img/favicons/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="assets/img/favicons/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="assets/img/favicons/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="assets/img/favicons/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="assets/img/favicons/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="assets/img/favicons/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="assets/img/favicons/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicons/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="assets/img/favicons/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="assets/img/favicons/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicons/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="57x57" href="assets/img/favicons/">
+    <link rel="apple-touch-icon" sizes="60x60" href="assets/img/favicons/">
+    <link rel="apple-touch-icon" sizes="72x72" href="assets/img/favicons/">
+    <link rel="apple-touch-icon" sizes="76x76" href="assets/img/favicons/">
+    <link rel="apple-touch-icon" sizes="114x114" href="assets/img/favicons/">
+    <link rel="apple-touch-icon" sizes="120x120" href="assets/img/favicons/">
+    <link rel="apple-touch-icon" sizes="144x144" href="assets/img/favicons/">
+    <link rel="apple-touch-icon" sizes="152x152" href="assets/img/favicons/">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicons/">
+    <link rel="icon" type="image/png" sizes="192x192" href="assets/img/favicons/">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/img/">
+    <link rel="icon" type="image/png" sizes="96x96" href="assets/img/">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/">
     <link rel="manifest" href="assets/img/favicons/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="assets/img/favicons/ms-icon-144x144.png">
