--- a/about.html
+++ b/about.html
@@ -260,11 +260,7 @@
                             </div>
                             <div class="col-auto d-none d-xl-block ms-auto">
                                 <div class="header-button">
-                                    <button type="button" class="simple-icon searchBoxToggler"><i class="far fa-search"></i></button>
-                                    <button type="button" class="simple-icon sideMenuToggler">
-                                        <span class="badge">5</span>
-                                        <i class="fa-regular fa-cart-shopping"></i>
-                                    </button>
+                                    
                                     <a href="contact.html" class="th-btn">Get A Quote<i class="fas fa-chevrons-right ms-2"></i></a>
                                 </div>
                             </div>
@@ -278,7 +274,7 @@
     <!--==============================
     Breadcumb
     ============================== -->
-    <div class="breadcumb-wrapper " data-bg-src="assets/img/hero/abt.jpg">
+    <div class="breadcumb-wrapper " data-bg-src="assets/img/hero/pets.png">
         <div class="container">
             <div class="breadcumb-content">
                 <h1 class="breadcumb-title">About Us</h1>
@@ -293,7 +289,7 @@
     <!--==============================
     About Area  
     ==============================-->
-    <div class="overflow-hidden space" id="about-sec">
+    <div class="overflow-hidden space-top-80" id="about-sec">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-xl-6 mb-40 mb-xl-0">
@@ -302,7 +298,7 @@
                             <img src="assets/img/normal/about_3_2.png" alt="About">
                         </div>
                         <div class="img1">
-                            <img src="assets/img/product/all1.png" alt="About">
+                            <img src="assets/img/normal/about-us1.png" alt="About">
                         </div>
                     </div>
                 </div>
@@ -310,7 +306,7 @@
                     <div class="title-area mb-32">
                         <span class="sub-title"><img src="assets/img/icon/pets.svg" alt="shape">About Us</span>
                         <h2 class="sec-title">Naturally Clean, Genuinely Caring – The Eco Cleanser Story</h2>
-                        <p class="sec-text">We believe that pet care should be as pure and loving as the bond you share with your furry companions. Our journey began with a simple mission: to create eco-friendly grooming products that are safe for pets, kind to the planet, and made with nature’s best. <br>
+                        <p class="sec-text txt-justify">We believe that pet care should be as pure and loving as the bond you share with your furry companions. Our journey began with a simple mission: to create eco-friendly grooming products that are safe for pets, kind to the planet, and made with nature’s best. <br>
                             Our products are crafted with natural ingredients like neem, aloe vera, coconut oil, and essential plant extracts—free from harmful chemicals, synthetic fragrances, and artificial dyes. We’re proud to support a clean lifestyle for your pets, from bath time to bedtime.</p>
                     </div>
                     <div class="checklist list-two-column mb-40">
@@ -322,7 +318,7 @@
                         </ul>
                     </div>
                     <div>
-                        <a href="about.html" class="th-btn">Discover More<i class="fas fa-chevrons-right ms-2"></i></a>
+                        <a href="products.html" class="th-btn">Our Products<i class="fas fa-chevrons-right ms-2"></i></a>
                     </div>
                 </div>
             </div>
@@ -332,11 +328,11 @@
     <!--==============================
     Category Area  
     ==============================-->
-    <section class="">
+    <section class="mt-80">
         <div class="container">
             <div class="" >
-                <div class="swiper-wrapper gap-15 mb-50">
-                    <div class="col-lg-4">
+                <div class="swiper-wrapper flx-col gap-15 mb-50">
+                    <div class="col-lg-4 col-md-12">
                         <div class="swiper-slide">
                             <div class="category-card">
                                 <div class="box-shape" data-bg-src="assets/img/bg/category_card_bg.png"></div>
@@ -348,7 +344,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4">
+                    <div class="col-lg-4 col-md-12">
                         <div class="swiper-slide">
                             <div class="category-card">
                                 <div class="box-shape" data-bg-src="assets/img/bg/category_card_bg.png"></div>
@@ -360,7 +356,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4">
+                    <div class="col-lg-4 col-md-12">
                         <div class="swiper-slide">
                             <div class="category-card">
                                 <div class="box-shape" data-bg-src="assets/img/bg/category_card_bg.png"></div>
@@ -436,17 +432,17 @@
         <!--==============================
     About Area  
     ==============================-->
-    <div class="overflow-hidden overflow-hidden space" id="about-sec">
+    <div class="overflow-hidden overflow-hidden pt-165 mt-5" id="about-sec">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-xl-6 mb-30 mb-xl-0">
                     <div class="img-box1">
                         <div class="img1">
-                            <img src="assets/img/normal/bath.png" alt="About">
+                            <img src="assets/img/normal/about-why.png" alt="About">
                         </div>
-                        <div class="img2">
-                            <img src="assets/img/product/a" alt="Image">
-                        </div>
+                        <!-- <div class="img2">
+                            <img src="assets/img/normal/bag1.png" alt="Image">
+                        </div> -->
                         <!-- <div class="shape1 movingX">
                             <img src="assets/img/normal/about_1_3.png" alt="Image">
                         </div> -->
@@ -456,29 +452,29 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xl-6">
+                <div class="col-xl-6 mt-5">
                     <div class="ps-xxl-5 ps-xl-2 ms-xl-1 text-center text-xl-start">
                         <div class="title-area mb-32">
                             <span class="sub-title"><img src="assets/img/icon/pets.svg" alt="shape">Why Eco Cleanser</span>
                             <h2 class="sec-title">A Fresh Start With Every Wash</h2>
-                            <p class="sec-text">We take pride in sourcing our ingredients from certified organic farms, ensuring every bottle delivers gentle cleansing, deep nourishment, and zero compromise. Our products are handcrafted with care to maintain the highest standards of pet wellness. <br> Say goodbye to irritation, flakes, and chemical residues. Our shampoos, soaps, and kennel washes are designed to soothe, soften, and shine—naturally.</p>
+                            <p class="sec-text txt-justify">We take pride in sourcing our ingredients from certified organic farms, ensuring every bottle delivers gentle cleansing, deep nourishment, and zero compromise. Our products are handcrafted with care to maintain the highest standards of pet wellness. <br> Say goodbye to irritation, flakes, and chemical residues. Our shampoos, soaps, and kennel washes are designed to soothe, soften, and shine—naturally.</p>
                         </div>
-                        <div class="about-feature-wrap">
+                        <!-- <div class="about-feature-wrap">
                             <div class="about-feature">
-                                <!-- <div class="box-icon">
+                                <div class="box-icon">
                                     <img src="assets/img/icon/paw-prints.svg" alt="Icon">
-                                </div> -->
+                                </div>
                                 <h3 class="box-title"></h3>
                             </div>
                             <div class="about-feature">
-                                <!-- <div class="box-icon">
+                                <div class="box-icon">
                                     <img src="assets/img/icon/about_feature_2.svg" alt="Icon">
-                                </div> -->
+                                </div>
                                 <h3 class="box-title"></h3>
                             </div>
-                        </div>
+                        </div> -->
                         <div>
-                            <a href="about.html" class="th-btn">Discover More<i class="fas fa-chevrons-right ms-2"></i></a>
+                            <a href="blogs.html" class="th-btn">Our Blogs<i class="fas fa-chevrons-right ms-2"></i></a>
                         </div>
                     </div>
                 </div>
@@ -489,7 +485,7 @@
     <!--==============================
     Service Area  
     ==============================-->
-    <section class="overflow-hidden mb-100 incredient mt-5" id="service-sec">
+    <section class="overflow-hidden mb-100 incredient mt-80" id="service-sec">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-6 col-md-7">
