--- a/index.html
+++ b/index.html
@@ -260,11 +260,7 @@
                             </div>
                             <div class="col-auto d-none d-xl-block ms-auto">
                                 <div class="header-button">
-                                    <button type="button" class="simple-icon searchBoxToggler"><i class="far fa-search"></i></button>
-                                    <button type="button" class="simple-icon sideMenuToggler">
-                                        <span class="badge">5</span>
-                                        <i class="fa-regular fa-cart-shopping"></i>
-                                    </button>
+                                    
                                     <a href="contact.html" class="th-btn">Get A Quote<i class="fas fa-chevrons-right ms-2"></i></a>
                                 </div>
                             </div>
@@ -299,7 +295,7 @@
                             </div>
                         </div>
                         <div class="hero-img" data-ani="slidebottomright" data-ani-delay="0.1s">
-                            <img src="assets/img/product/ec-soap.png" alt="Image" style="height: 550px;">
+                            <img class="hero-prod1" src="assets/img/product/eco-soap.png" alt="Image">
                         </div>
                         <div class="hero-shape1" data-ani="slideinup" data-ani-delay="0.7s">
                             <img src="assets/img/hero/hero_shape_1_1.png" alt="shape">
@@ -332,8 +328,8 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="hero-img" data-ani="slidebottomright" data-ani-delay="0.1s">
-                            <img src="assets/img/product/ec-shampo.png" alt="Image" style="height: 750px;">
+                        <div class="hero-img prod2" data-ani="slidebottomright" data-ani-delay="0.1s">
+                            <img class="hero-prod2" src="assets/img/product/eco-shampoo.png" alt="Image">
                         </div>
                         <div class="hero-shape1" data-ani="slideinup" data-ani-delay="0.7s">
                             <img src="assets/img/hero/hero_shape_1_1.png" alt="shape">
@@ -367,7 +363,7 @@
                             </div>
                         </div>
                         <div class="hero-img" data-ani="slidebottomright" data-ani-delay="0.1s">
-                            <img src="assets/img/product/ec-kennal2.png" alt="Image" style="height: 600px;">
+                            <img class="hero-prod3" src="assets/img/product/eco-kennal.png" alt="Image">
                         </div>
                         <div class="hero-shape1" data-ani="slideinup" data-ani-delay="0.7s">
                             <img src="assets/img/hero/hero_shape_1_1.png" alt="shape">
@@ -395,13 +391,13 @@
     <!--==============================
     Products Area  
     ==============================-->        
-    <section class="space">
+    <section class="mt-50">
         <div class="container z-index-common">
             <div class="row gy-30">
                 <div class="col-xl-6">
                     <div class="offer-block mega-hover" data-bg-color="rgb(165 148 223)">
                         <div class="box-img">
-                            <img src="assets/img/product/ec-shampo.png" alt="Image" style="height: 330px;">
+                            <img class="img-height" src="assets/img/product/ec-shampo.png" alt="Image">
                         </div>
                         <span class="h6 box-subtitle">Eco-Friendly : Shampo</span>
                         <div class="box-content" data-border="#F3EEC1">
@@ -415,7 +411,7 @@
                 <div class="col-xl-6">
                     <div class="offer-block mega-hover" data-bg-color="rgb(181 206 64)">
                         <div class="box-img">
-                            <img src="assets/img/product/lemon.png" alt="Image" style="height: 330px;">
+                            <img class="img-height padd" src="assets/img/product/Neem.png" alt="Image">
                         </div>
                         <span class="h6 box-subtitle">Eco-Friendly : Kennal Wash </span>
                         <div class="box-content" data-border="#D1EDD2">
@@ -429,7 +425,7 @@
                 <div class="col-xl-12">
                     <div class="offer-block offer-block1 mega-hover" data-bg-color="rgb(115 191 215)">
                         <div class="box-img">
-                            <img src="assets/img/product/ec-soap.png" alt="Image" style="height: 400px;">
+                            <img class="img-height1" src="assets/img/product/ec-soap.png" alt="Image"">
                         </div>
                         <span class="h6 box-subtitle">Eco-Cleanser : Soap</span>
                         <div class="box-content" data-border="#D1EDD2">
@@ -447,7 +443,7 @@
      <!--==============================
     Feature Area  
     ==============================-->
-    <div class="overflow-hidden space">
+    <div class="overflow-hidden mt-50 pt-60">
         <div class="container">
             <div class="row">
                 <div class="col-xl-6 text-center text-xl-start">
@@ -497,7 +493,7 @@
                             <div class="img-box2-wrap">
                                 <div class="img-box2">
                                     <div class="img1">
-                                        <img src="assets/img/product/all1.png" alt="Why">
+                                        <img src="assets/img/normal/why-index1.png" alt="Why">
                                     </div>
                                     <div class="img2">
                                         <img src="assets/img/normal/why_1_2.png" alt="Why">
@@ -579,10 +575,10 @@
         </div>
     </section>
 
-    <!--==============================
+    <!-- ==============================
     Shop-Now Area  
     ==============================-->
-    <section class="" data-pos-for="#category-sec">
+    <!-- <section class="" data-pos-for="#category-sec">
         <div class="container z-index-common">
             <div class="row gy-4 justify-content-center">
                 <div class="col-xl-4 col-md-6">
@@ -608,7 +604,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
 
     
@@ -628,13 +624,13 @@
                     <!-- <div class="form-group">
                         <input class="form-control" type="email" placeholder="Email Address" required="">
                     </div> -->
-                    <button type="submit" class="th-btn style6">Shop Now on Amazon</button>
+                    <button type="submit" class="th-btn style6">Shop Now on Amazon <i class="fa-brands fa-amazon"></i></button>
                     <button type="submit" class="th-btn style6">Blogs</button>
                 </form>
             </div>
         </div>
     </div>
-    <footer class="footer-wrapper footer-layout2" style="background-image: url(&quot;assets/img/bg/footer_bg_1.jpg&quot;);">
+    <footer class="footer-wrapper footer-layout2" style="background-image: url(&quot;assets/img/bg/footer.jpg&quot;);">
         <!-- <div class="shape-mockup" data-top="0" data-left="0"><img src="assets/img/shape/footer_shape_1.png" alt="shape"></div> -->
         <!-- <div class="shape-mockup" data-bottom="0" data-right="0"><img src="assets/img/shape/footer_shape_2.png" alt="shape"></div> -->
         <!-- <div class="container z-index-common">
@@ -736,9 +732,8 @@
                         <p class="copyright-text">Copyright <i class="fal fa-copyright"></i> 2025 <a href="">Eco-Cleanser</a>. All Rights Reserved.</p>
                     </div>
                     <div class="col-md-6 text-center text-md-end">
-                        <div class="payment-img">
-                            <img src="assets/img/normal/payment_methods.png" alt="Image">
-                        </div>
+                        <p class="copyright-text">Designed & Developed by <a href="www.brinit.in">Brini'T</a>.</p>
+
                     </div>
                 </div>
             </div>
