--- a/products.html
+++ b/products.html
@@ -278,7 +278,7 @@
     <!--==============================
     Breadcumb
     ============================== -->
-    <div class="breadcumb-wrapper " data-bg-src="assets/img/hero/abt.jpg">
+    <div class="breadcumb-wrapper " data-bg-src="assets/img/hero/pets2.png">
         <div class="container">
             <div class="breadcumb-content">
                 <h1 class="breadcumb-title">Products</h1>
@@ -297,28 +297,28 @@
         <div class="container z-index-common">
             <div class="row gy-30">
                 <div class="col-xl-12">
-                    <div class="offer-block-product offer-block-product1 mega-hover">
-                        <div class="box-img">
-                            <img src="assets/img/product/ec-soap.png" alt="Image" style="height: 400px;">
-                        </div>
-                        <div class="box-content" data-border="#D1EDD2">
+                    <div class="offer-block-product offer-block-product1 mega-hover text-center">
+                        <div class="position-relative">
+                            <img class="paw-prints" src="assets/img/icon/paw-prints.svg" alt="Icon">
                             <span class="box-heading">Grooming With Goodness. Clean With Care.</span>
                             <h3 class="box-title">Eco-Cleanser Pet <b>Soap</b></h3>
-                            <p class="box-text">Eco Cleanser brings you a line of all-natural, eco-friendly grooming products <br>formulated to pamper your pets while protecting the planet.</p>
-                            <a href="shop-details.html" class="th-btn btn-sm">Shop Now<i class="fas fa-chevrons-right ms-2"></i></a>
                         </div>
+
+                            <p class="box-text">Eco Cleanser brings you a line of all-natural, eco-friendly grooming products formulated to pamper your pets while protecting the planet. This eco-friendly soap is specially formulated with aloevera and vitamin E to gently cleanse your furry friend's coat and skin. 
+                                Pet-Friendly Formula: Made with natural, pet-safe ingredients, this</p>
+                            <!-- <a href="shop-details.html" class="th-btn btn-sm">Shop Now<i class="fas fa-chevrons-right ms-2"></i></a> -->
                     </div>
                 </div>
             </div>
         </div>
     </section>
 
-    <section class="why-sec3 space scaled-wrapper mt-5" data-bg-src="assets/img/bg/product.png">
+    <section class="why-sec3 space scaled-wrapper mt-5" data-bg-src="assets/img/bg/soap-bg.png">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-5 col-md-7">
                     <div class="title-area text-center">
-                        <span class="sub-title"><img src="assets/img/icon/paw-prints.svg" alt="Icon" style="height: 70px;">Gentle Cleanse, Pure Comfort</span>
+                        <span class="sub-title">Gentle Cleanse, Pure Comfort</span>
                         <h2 class="sec-title text-white">Eco Cleanser Pet Soap</h2>
                     </div>
                 </div>
@@ -359,6 +359,11 @@
                     <div class="img-box4 mt-0">
                         <img src="assets/img/product/ec-soap.png" alt="Why" style="height: 430px;">
                     </div>
+                    <div class="justify-content-center d-flex gap-2">
+                        <a href="shop-details.html" class="th-btn btn-sm">Shop Now on Amazon <i class="fa-brands fa-amazon"></i></a>
+                        <a href="shop-details.html" class="th-btn btn-sm">More Details of Products <i class="fas fa-chevrons-right ms-2"></i></a>
+                    </div>
+
                 </div>
                 <div class="col-sm-auto">
                     <div class="why-feature-right">
@@ -402,15 +407,19 @@
         <div class="container z-index-common">
             <div class="row gy-30">
                 <div class="col-xl-12">
-                    <div class="offer-block-product2-border offer-block-product offer-block-product1 mega-hover">
-                        <div class="box-img">
+                    <div class="offer-block-product2-border offer-block-product offer-block-product1 mega-hover text-center">
+                        <!-- <div class="box-img">
                             <img src="assets/img/product/ec-shampo.png" alt="Image" style="height: 400px;">
-                        </div>
-                        <div class="box-content" data-border="#D1EDD2">
-                            <span class="box-heading">Nourish the Coat, Soothe the Skin</span>
-                            <h3 class="box-title">Eco-Cleanser Pet <b>Shampo</b></h3>
-                            <p class="box-text">Made with coconut oil, lavender extract, and apple cider vinegar, this shampoo deeply cleanses <br>while moisturizing your pet’s skin.It's perfect for regular use, even for pets prone to allergies.</p>
-                            <a href="shop-details.html" class="th-btn btn-sm">Shop Now<i class="fas fa-chevrons-right ms-2"></i></a>
+                        </div> -->
+                        <!-- <div class="box-content" data-border="#D1EDD2"> -->
+                            <div class="position-relative">
+                                <img class="paw-prints2" src="assets/img/icon/paw-prints.svg" alt="Icon">
+                                <span class="box-heading">Deeply Nourish your Pet’s Coat and Gently</span>
+                                <h3 class="box-title">Eco-Cleanser Pet <b>Shampo</b></h3>
+                            </div>
+
+                            <p class="box-text">Made with coconut oil, lavender extract, and apple cider vinegar, this shampoo deeply cleanses while moisturizing your pet’s skin.It's perfect for regular use, even for pets prone to allergies.</p>
+                            <!-- <a href="shop-details.html" class="th-btn btn-sm">Shop Now<i class="fas fa-chevrons-right ms-2"></i></a> -->
                         </div>
                     </div>
                 </div>
@@ -418,12 +427,12 @@
         </div>
     </section>
 
-    <section class="why-sec3 space scaled-wrapper mt-5" data-bg-src="assets/img/bg/product.png">
+    <section class="why-sec3 space scaled-wrapper mt-5" data-bg-src="assets/img/bg/shampoo-bg.png">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-5 col-md-7">
                     <div class="title-area text-center">
-                        <span class="sub-title"><img src="assets/img/icon/paw-prints.svg" alt="Icon" style="height: 70px;">Gentle Cleanse, Pure Comfort</span>
+                        <span class="sub-title">Gentle Cleanse, Pure Comfort</span>
                         <h2 class="sec-title text-white">Eco Cleanser Pet Shampoo</h2>
                     </div>
                 </div>
@@ -463,6 +472,10 @@
                 <div class="col-auto d-none d-lg-block">
                     <div class="img-box4 mt-0">
                         <img src="assets/img/product/ec-shampo.png" alt="Why" style="height: 520px;">
+                    </div>
+                    <div class="justify-content-center d-flex gap-2">
+                        <a href="shop-details.html" class="th-btn btn-sm">Shop Now on Amazon <i class="fa-brands fa-amazon"></i></i></a>
+                        <a href="shop-details.html" class="th-btn btn-sm">More Details of Products <i class="fas fa-chevrons-right ms-2"></i></a>
                     </div>
                 </div>
                 <div class="col-sm-auto">
@@ -507,15 +520,18 @@
         <div class="container z-index-common">
             <div class="row gy-30">
                 <div class="col-xl-12">
-                    <div class="offer-block-product3-border offer-block-product offer-block-product1 mega-hover">
-                        <div class="box-img">
+                    <div class="offer-block-product3-border offer-block-product offer-block-product1 mega-hover text-center">
+                        <!-- <div class="box-img">
                             <img src="assets/img/product/ec-kennal2.png" alt="Image" style="height: 400px;">
-                        </div>
-                        <div class="box-content" data-border="#D1EDD2">
-                            <span class="box-heading">A Fresh, Hygienic Space for Your Pet</span>
-                            <h3 class="box-title">Eco-Cleanser Pet <b>Kennal Wash</b></h3>
-                            <p class="box-text">Eco Cleanser Kennel Wash is an all-purpose surface disinfectant <br>designed to eliminate odors and germs from pet crates, bedding,<br>floors, and play areas. Infused with lemon, eucalyptus, and tea tree oils,<br>it keeps your pet’s space fresh and safe—naturally.</p>
-                            <a href="shop-details.html" class="th-btn btn-sm">Shop Now<i class="fas fa-chevrons-right ms-2"></i></a>
+                        </div> -->
+                        <!-- <div class="box-content" data-border="#D1EDD2"> -->
+                            <div class="position-relative">
+                                <img class="paw-prints3" src="assets/img/icon/paw-prints.svg" alt="Icon">
+                                <span class="box-heading">Create a Clean a Fresh, Hygienic, Odor-Free Space for Your Pet</span>
+                                <h3 class="box-title">Eco-Cleanser Pet <b>Kennal Wash</b></h3>
+                            </div>
+                            <p class="box-text">Eco Cleanser Kennel Wash is an all-purpose surface disinfectant designed to eliminate odors and germs from pet crates, bedding, floors, and play areas. Infused with lemon, eucalyptus, and tea tree oils, it keeps your pet’s space fresh and safe—naturally.</p>
+                            <!-- <a href="shop-details.html" class="th-btn btn-sm">Shop Now<i class="fas fa-chevrons-right ms-2"></i></a> -->
                         </div>
                     </div>
                 </div>
@@ -523,12 +539,12 @@
         </div>
     </section>
 
-    <section class="why-sec3 space scaled-wrapper mt-5" data-bg-src="assets/img/bg/product.png">
+    <section class="why-sec3 space scaled-wrapper mt-5" data-bg-src="assets/img/bg/kennal-bg.png">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-5 col-md-7">
                     <div class="title-area text-center">
-                        <span class="sub-title"><img src="assets/img/icon/paw-prints.svg" alt="Icon" style="height: 70px;">Gentle Cleanse, Pure Comfort</span>
+                        <span class="sub-title">Gentle Cleanse, Pure Comfort</span>
                         <h2 class="sec-title text-white">Eco Cleanser Kennel Wash</h2>
                     </div>
                 </div>
@@ -568,6 +584,10 @@
                 <div class="col-auto d-none d-lg-block">
                     <div class="img-box4 mt-0">
                         <img src="assets/img/product/ec-kennal2.png" alt="Why" style="height: 364px;">
+                    </div>
+                    <div class="justify-content-center d-flex gap-2">
+                        <a href="shop-details.html" class="th-btn btn-sm">Shop Now on Amazon <i class="fa-brands fa-amazon"></i></i></a>
+                        <a href="shop-details.html" class="th-btn btn-sm">More Details of Products <i class="fas fa-chevrons-right ms-2"></i></a>
                     </div>
                 </div>
                 <div class="col-sm-auto">
