--- a/about.html
+++ b/about.html
@@ -261,7 +261,7 @@
                             <div class="col-auto d-none d-xl-block ms-auto">
                                 <div class="header-button">
                                     
-                                    <a href="contact.html" class="th-btn">Get A Quote<i class="fas fa-chevrons-right ms-2"></i></a>
+                                    <a href="products.html" class="th-btn">Explore Products<i class="fas fa-chevrons-right ms-2"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -274,7 +274,7 @@
     <!--==============================
     Breadcumb
     ============================== -->
-    <div class="breadcumb-wrapper " data-bg-src="assets/img/hero/pets.png">
+    <div class="breadcumb-wrapper " data-bg-src="assets/img/hero/pets2.png">
         <div class="container">
             <div class="breadcumb-content">
                 <h1 class="breadcumb-title">About Us</h1>
