--- a/soap.html
+++ b/soap.html
@@ -260,12 +260,8 @@
                             </div>
                             <div class="col-auto d-none d-xl-block ms-auto">
                                 <div class="header-button">
-                                    <button type="button" class="simple-icon searchBoxToggler"><i class="far fa-search"></i></button>
-                                    <button type="button" class="simple-icon sideMenuToggler">
-                                        <span class="badge">5</span>
-                                        <i class="fa-regular fa-cart-shopping"></i>
-                                    </button>
-                                    <a href="contact.html" class="th-btn">Get A Quote<i class="fas fa-chevrons-right ms-2"></i></a>
+                                    
+                                    <a href="products.html" class="th-btn">Explore Products<i class="fas fa-chevrons-right ms-2"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -278,13 +274,12 @@
     <!--==============================
     Breadcumb
     ============================== -->
-    <div class="breadcumb-wrapper " data-bg-src="assets/img/hero/abt.jpg">
+    <div class="breadcumb-wrapper " data-bg-src="assets/img/hero/pets2.png">
         <div class="container">
             <div class="breadcumb-content">
                 <h1 class="breadcumb-title">Soap</h1>
                 <ul class="breadcumb-menu">
                     <li><a href="home-organic-farm.html">Home</a></li>
-                    <li>Products</li>
                     <li>Soap</li>
                 </ul>
             </div>
