--- a/blogs.html
+++ b/blogs.html
@@ -423,7 +423,7 @@
             </div>
         </div>
     </div>
-    <footer class="footer-wrapper footer-layout2" style="background-image: url(&quot;assets/img/bg/footer_bg_1.jpg&quot;);">
+    <footer class="footer-wrapper footer-layout2" style="background-image: url(&quot;assets/img/bg/footer.jpg&quot;);">
         <!-- <div class="shape-mockup" data-top="0" data-left="0"><img src="assets/img/shape/footer_shape_1.png" alt="shape"></div> -->
         <!-- <div class="shape-mockup" data-bottom="0" data-right="0"><img src="assets/img/shape/footer_shape_2.png" alt="shape"></div> -->
         <!-- <div class="container z-index-common">
@@ -525,9 +525,8 @@
                         <p class="copyright-text">Copyright <i class="fal fa-copyright"></i> 2025 <a href="">Eco-Cleanser</a>. All Rights Reserved.</p>
                     </div>
                     <div class="col-md-6 text-center text-md-end">
-                        <div class="payment-img">
-                            <img src="assets/img/normal/payment_methods.png" alt="Image">
-                        </div>
+                        <p class="copyright-text">Designed & Developed by <a href="www.brinit.in">Brini'T</a>.</p>
+
                     </div>
                 </div>
             </div>
